Fixed css on mobile.

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -106,6 +106,9 @@ nav {
   header {
     display: none;
   }
+  main {
+    margin-top: $nav-height;
+  }
 }
 @media screen and (min-width: $breakpoint + 1) {
   .nav-list {
